fix: now nav menu in planner page transition does not use visibility anymore, but display

--- a/styles/planner.css
+++ b/styles/planner.css
@@ -230,7 +230,6 @@ nav {
   flex-direction: row;
   justify-content: flex-end;
   z-index: 2000;
-  visibility: hidden;
 }
 
 .nav-menu {
